Update phone number whitespace

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a class="logo" href="/"><img src="images/morse media white.png" alt="Morse Media logo"></a>
                     <h1 class="hero-title">Let's connect your <span id="colour-pop">Atherton Tabelands business</span> to the world!</h1>
                     <h2 class="tagline">Create Your Online Presence with Zach Morse Media.</h2>
-                    <h3 class="call-to-action"><a class="grow" href="tel:+61 412345678">0412 345 678</a></h3>
+                    <h3 class="call-to-action"><a class="grow" href="tel:+61 412345678">0412345678</a></h3>
                 </section>
                 <section">
                     <script src="https://cdn.botpress.cloud/webchat/v0/inject.js"></script>
@@ -51,7 +51,7 @@
                         <p><img class="service-symbol" src="images/Phone.png" alt="Phone symbol"><span class="enlarge"> Responsive Design</span><br> We use a mobile first approach to ensure your website looks good on all devices.</p>
                         <p><img class="service-symbol" src="images/paint-brush.png" alt="Paint brush symbol"><span class="enlarge"> Custom Colour Palette</span><br> We use custom colour palettes to create an appealing design and make call to actions pop out.</p>
                         <p><img class="service-symbol" src="images/Server.png" alt="Server symbol"><span class="enlarge"> Web Hosting</span><br> We offer web hosting services so we can take the stress out of maintaining a website.</p>
-                        <h3 class="call-to-action"><a class="grow" href="tel:+61 412345678">0412 345 678</a></h3>
+                        <h3 class="call-to-action"><a class="grow" href="tel:+61 412345678">0412345678</a></h3>
                     </div>
                 </div>
                 <div id="breaker">
@@ -69,7 +69,7 @@
                         <p><img class="service-symbol" src="images/On-page-seo.png" alt="Settings symbol"><span class="enlarge"> On Page SEO</span><br> We optimise your website for rich keywords so it is discoverable to google.</p>
                         <p><img class="service-symbol" src="images/Analytics.png" alt="Graph symbol"><span class="enlarge"> Analytics</span><br> We use google analytics and other tools to track the performance of your website to get valuable insights.</p>
                         <p><img class="service-symbol" src="images/Link.png" alt="Chain symbol"><span class="enlarge"> Backlinks</span><br> We help you build quality backlinks to obtain topical authority in your industry.</p>
-                        <h3 class="call-to-action"><a class="grow" href="tel:+61 412345678">0412 345 678</a></h3>
+                        <h3 class="call-to-action"><a class="grow" href="tel:+61 412345678">0412345678</a></h3>
                     </div>
                 </div>  
             </section>
